--- a/Test/TestLib/CMakeLists.txt
+++ b/Test/TestLib/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(TestLib
     ${CMAKE_CURRENT_SOURCE_DIR}/include/TestLib/RTTracer.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/TestLib/RTGui.h
     ${CMAKE_CURRENT_SOURCE_DIR}/include/TestLib/RTUtils.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/TestLib/RTAssets.h
 
     ${CMAKE_CURRENT_SOURCE_DIR}/src/RTContext.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/RTApplication.cpp
@@ -12,6 +13,7 @@ add_library(TestLib
     ${CMAKE_CURRENT_SOURCE_DIR}/src/RTTracer.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/RTGui.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/RTUtils.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/RTAssets.cpp
 )
 
 target_include_directories(
