--- a/Test/Test24/Test24Config.h.in
+++ b/Test/Test24/Test24Config.h.in
@@ -1,4 +1,5 @@
 #ifndef TEST_TEST24_CONFIG_H
 #define TEST_TEST24_CONFIG_H
+#cmakedefine TEST_TEST24_NUM_RAY_TYPE @TEST_TEST24_NUM_RAY_TYPE@
 #cmakedefine TEST_TEST24_DATA_PATH "@TEST_TEST24_DATA_PATH@"
 #endif
