--- a/Test/Test24/Tracers/TestGL/CMakeLists.txt
+++ b/Test/Test24/Tracers/TestGL/CMakeLists.txt
@@ -6,4 +6,4 @@ add_library(
 
 target_include_directories(Test24_Tracer_TestGL PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-target_link_libraries(Test24_Tracer_TestGL PUBLIC TestLib)
+target_link_libraries(Test24_Tracer_TestGL PUBLIC TestLib Test24_Share)
