--- a/Test/Test24/Tracers/CMakeLists.txt
+++ b/Test/Test24/Tracers/CMakeLists.txt
@@ -2,3 +2,5 @@ add_subdirectory(TestGL)
 add_subdirectory(DebugOPX)
 add_subdirectory(NEEOPX)
 add_subdirectory(PathOPX)
+add_subdirectory(GuideNEEOPX)
+add_subdirectory(GuidePathOPX)
