--- a/Test/Test24/Main/CMakeLists.txt
+++ b/Test/Test24/Main/CMakeLists.txt
@@ -19,4 +19,4 @@ add_executable(
 )
 
 target_include_directories(Test24 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR})
-target_link_libraries(Test24 TestLib Test24_Share Test24_Tracer_TestGL Test24_Tracer_DebugOPX Test24_Tracer_PathOPX Test24_Tracer_NEEOPX Test24_Tracer_GuidePathOPX Test24_Tracer_ReSTIROPX)
+target_link_libraries(Test24 TestLib Test24_Share Test24_Tracer_TestGL Test24_Tracer_DebugOPX Test24_Tracer_PathOPX Test24_Tracer_NEEOPX Test24_Tracer_GuidePathOPX Test24_Tracer_GuideNEEOPX Test24_Tracer_ReSTIROPX)
