--- a/Test/Test24/Tracers/GuidePathOPX/CMakeLists.txt
+++ b/Test/Test24/Tracers/GuidePathOPX/CMakeLists.txt
@@ -40,12 +40,14 @@ add_library(Test24_Tracer_GuidePathOPX STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayGuide.cu
     ${CMAKE_CURRENT_SOURCE_DIR}/cuda/Callable.cu
 )
+add_custom_target(Test24_Tracer_GuidePathOPX_Build_Kernel)
+add_custom_command(TARGET Test24_Tracer_GuidePathOPX_Build_Kernel PRE_BUILD  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h     ${TEST_TEST24_GUIDE_PATH_OPX_CUDA_PATH}/RayTrace.h )
+add_custom_command(TARGET Test24_Tracer_GuidePathOPX_Build_Kernel PRE_BUILD  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/PathGuiding.h  ${TEST_TEST24_GUIDE_PATH_OPX_CUDA_PATH}/PathGuiding.h )
+add_custom_command(TARGET Test24_Tracer_GuidePathOPX_Build_Kernel POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayGuide.cu    ${TEST_TEST24_GUIDE_PATH_OPX_CUDA_PATH}/RayGuide.cu)
 
-add_custom_command(TARGET Test24_Tracer_GuidePathOPX PRE_BUILD  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h     ${TEST_TEST24_GUIDE_PATH_OPX_CUDA_PATH}/RayTrace.h )
-add_custom_command(TARGET Test24_Tracer_GuidePathOPX PRE_BUILD  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/PathGuiding.h  ${TEST_TEST24_GUIDE_PATH_OPX_CUDA_PATH}/PathGuiding.h )
-add_custom_command(TARGET Test24_Tracer_GuidePathOPX POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayGuide.cu    ${TEST_TEST24_GUIDE_PATH_OPX_CUDA_PATH}/RayGuide.cu)
-
-rtlib_compile_ptx(Test24_Tracer_GuidePathOPX ${TEST_TEST24_GUIDE_PATH_OPX_CUDA_PATH}/RayGuide.cu   ${TEST_TEST24_GUIDE_PATH_OPX_CUDA_PATH} )
+rtlib_compile_ptx(Test24_Tracer_GuidePathOPX_Build_Kernel ${TEST_TEST24_GUIDE_PATH_OPX_CUDA_PATH}/RayGuide.cu   ${TEST_TEST24_GUIDE_PATH_OPX_CUDA_PATH} )
 
 target_include_directories(Test24_Tracer_GuidePathOPX PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR}/cuda)
 target_link_libraries(Test24_Tracer_GuidePathOPX PUBLIC  TestLib Test24_Share)
+add_dependencies(Test24_Tracer_GuidePathOPX Test24_Tracer_GuidePathOPX_Build_Kernel)
+set_target_properties(Test24_Tracer_GuidePathOPX Test24_Tracer_GuidePathOPX_Build_Kernel PROPERTIES  FOLDER Test24/Tracers/GuidePathOPX)
