--- a/Test/Test24/Tracers/TestGL/CMakeLists.txt
+++ b/Test/Test24/Tracers/TestGL/CMakeLists.txt
@@ -7,3 +7,4 @@ add_library(
 target_include_directories(Test24_Tracer_TestGL PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 target_link_libraries(Test24_Tracer_TestGL PUBLIC TestLib Test24_Share)
+set_target_properties(Test24_Tracer_TestGL       PROPERTIES  FOLDER Test24/Tracers/TestGL)
