--- a/Test/Test24/Main/Test24Config.h.in
+++ b/Test/Test24/Main/Test24Config.h.in
@@ -2,4 +2,5 @@
 #define TEST_TEST24_CONFIG_H
 #cmakedefine TEST_TEST24_NUM_RAY_TYPE @TEST_TEST24_NUM_RAY_TYPE@
 #cmakedefine TEST_TEST24_DATA_PATH "@TEST_TEST24_DATA_PATH@"
+#cmakedefine TEST_TEST24_RSLT_PATH "@TEST_TEST24_RSLT_PATH@"
 #endif
