Add Gui Interaction

--- a/Test/Test24/Share/CMakeLists.txt
+++ b/Test/Test24/Share/CMakeLists.txt
@@ -1,6 +1,16 @@
+set(TEST_TEST24_NUM_RAY_TYPE 2)
+set(TEST_TEST24_DATA_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../Data"  )
+set(TEST_TEST24_RSLT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../../Result/Test/Test24")
+
+configure_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/Test24Config.h.in
+    ${CMAKE_CURRENT_BINARY_DIR}/Test24Config.h
+)
 
 add_library(Test24_Share 
     ${CMAKE_CURRENT_SOURCE_DIR}/include/Test24Event.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Test24Config.h.in
+    ${CMAKE_CURRENT_BINARY_DIR}/Test24Config.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Test24Event.cpp
 )
 target_include_directories(Test24_Share PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
