--- a/Test/Test24/Share/CMakeLists.txt
+++ b/Test/Test24/Share/CMakeLists.txt
@@ -13,6 +13,6 @@ add_library(Test24_Share
     ${CMAKE_CURRENT_BINARY_DIR}/Test24Config.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Test24Share.cpp
 )
-target_include_directories(Test24_Share PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_include_directories(Test24_Share PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR})
 target_link_libraries(Test24_Share PUBLIC RTLib)
-set_target_properties(Test24_Share               PROPERTIES  FOLDER Test24/Share)
+set_target_properties(Test24_Share PROPERTIES  FOLDER Test24/Share)
