--- a/Test/Test24/Tracers/PathOPX/Test24PathOPXConfig.h.in
+++ b/Test/Test24/Tracers/PathOPX/Test24PathOPXConfig.h.in
@@ -1,4 +1,6 @@
 #ifndef TEST_TEST24_PATH_OPX_CONFIG_H
 #define TEST_TEST24_PATH_OPX_CONFIG_H
+#include <Test24Config.h>
 #cmakedefine TEST_TEST24_PATH_OPX_CUDA_PATH "@TEST_TEST24_PATH_OPX_CUDA_PATH@"
+#define TEST_TEST24_PATH_OPX_RSLT_PATH TEST_TEST24_RSLT_PATH"/Tracer/PathOPX"
 #endif
