--- a/Test/Test24/Tracers/ReSTIROPX/CMakeLists.txt
+++ b/Test/Test24/Tracers/ReSTIROPX/CMakeLists.txt
@@ -1,12 +1,13 @@
 set(TEST_TEST24_RESTIR_OPX_CUDA_PATH "${CMAKE_CURRENT_BINARY_DIR}/cuda")
+
 configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/Test24RESTIROPXConfig.h.in 
     ${CMAKE_CURRENT_BINARY_DIR}/Test24RESTIROPXConfig.h
 )
 
-
-set(RAY_TRACE_MAX_VERTEX_COUNT 101)
-set(RAY_TRACE_ENABLE_SAMPLE    1)
+set(RAY_TRACE_MAX_VERTEX_COUNT     101)
+set(RAY_TRACE_ENABLE_TEXTURE_SAMPLE  1)
+set(RAY_TRACE_ENABLE_JITTER_SAMPLE   1)
 
 configure_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTraceConfig.h.in 
@@ -16,6 +17,7 @@ configure_file(
 add_library(Test24_Tracer_ReSTIROPX STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include/ReSTIROPXTracer.h
     ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Test24ReSTIROPXConfig.h.in
     ${CMAKE_CURRENT_BINARY_DIR}/Test24ReSTIROPXConfig.h
     ${TEST_TEST24_RESTIR_OPX_CUDA_PATH}/RayTraceConfig.h
 
@@ -26,7 +28,7 @@ add_library(Test24_Tracer_ReSTIROPX STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/cuda/Callable.cu
 )
 
-target_include_directories(Test24_Tracer_ReSTIROPX PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR}/cuda)
+target_include_directories(Test24_Tracer_ReSTIROPX PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include   ${CMAKE_CURRENT_BINARY_DIR}  ${CMAKE_CURRENT_BINARY_DIR}/cuda)
 target_link_libraries(Test24_Tracer_ReSTIROPX PUBLIC  TestLib Test24_Share)
 
 add_custom_target(Test24_Tracer_ReSTIROPX_Build_Kernel )
@@ -41,4 +43,4 @@ rtlib_compile_ptx(Test24_Tracer_ReSTIROPX_Build_Kernel ${TEST_TEST24_RESTIR_OPX_
 rtlib_compile_ptx(Test24_Tracer_ReSTIROPX_Build_Kernel ${TEST_TEST24_RESTIR_OPX_CUDA_PATH}/ReservoirReuse.cu   ${TEST_TEST24_RESTIR_OPX_CUDA_PATH} )
 
 add_dependencies(Test24_Tracer_ReSTIROPX Test24_Tracer_ReSTIROPX_Build_Kernel)
-set_target_properties(Test24_Tracer_ReSTIROPX  Test24_Tracer_ReSTIROPX_Build_Kernel PROPERTIES FOLDER Test24/Tracers/ReSTIROPX)
+set_target_properties(Test24_Tracer_ReSTIROPX  Test24_Tracer_ReSTIROPX_Build_Kernel PROPERTIES FOLDER Test24/Tracer/ReSTIROPX)
