--- a/Test/Test24/Tracers/DebugOPX/Test24DebugOPXConfig.h.in
+++ b/Test/Test24/Tracers/DebugOPX/Test24DebugOPXConfig.h.in
@@ -1,4 +1,6 @@
 #ifndef TEST_TEST24_DEBUG_OPX_CONFIG_H
 #define TEST_TEST24_DEBUG_OPX_CONFIG_H
+#include <Test24Config.h>
 #cmakedefine TEST_TEST24_DEBUG_OPX_CUDA_PATH "@TEST_TEST24_DEBUG_OPX_CUDA_PATH@"
+#define TEST_TEST24_DEBUG_OPX_RSLT_PATH TEST_TEST24_RSLT_PATH"/Tracer/DebugOPX"
 #endif
