--- a/Test/Test24/Tracers/GuideNEEOPX/Test24GuideNEEOPXConfig.h.in
+++ b/Test/Test24/Tracers/GuideNEEOPX/Test24GuideNEEOPXConfig.h.in
@@ -1,4 +1,6 @@
 #ifndef TEST_TEST24_GUIDE_NEE_OPX_CONFIG_H
 #define TEST_TEST24_GUIDE_NEE_OPX_CONFIG_H
+#include <Test24Config.h>
 #cmakedefine TEST_TEST24_GUIDE_NEE_OPX_CUDA_PATH "@TEST_TEST24_GUIDE_NEE_OPX_CUDA_PATH@"
+#define TEST_TEST24_GUIDE_NEE_OPX_RSLT_PATH TEST_TEST24_RSLT_PATH"/Tracer/GuideNEEOPX"
 #endif
