--- a/Test/Test24/Tracers/PathOPX/CMakeLists.txt
+++ b/Test/Test24/Tracers/PathOPX/CMakeLists.txt
@@ -16,6 +16,7 @@ configure_file(
 add_library(Test24_Tracer_PathOPX STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/include/PathOPXTracer.h
     ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/Test24PathOPXConfig.h.in
     ${CMAKE_CURRENT_BINARY_DIR}/Test24PathOPXConfig.h
 
     ${CMAKE_CURRENT_SOURCE_DIR}/src/PathOPXTracer.cpp
@@ -28,7 +29,7 @@ add_custom_command(TARGET Test24_Tracer_PathOPX_Build_Kernel PRE_BUILD  COMMAND 
 add_custom_command(TARGET Test24_Tracer_PathOPX_Build_Kernel POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/cuda/RayTrace.cu    ${TEST_TEST24_PATH_OPX_CUDA_PATH}/RayTrace.cu)
 rtlib_compile_ptx(Test24_Tracer_PathOPX_Build_Kernel ${TEST_TEST24_PATH_OPX_CUDA_PATH}/RayTrace.cu   ${TEST_TEST24_PATH_OPX_CUDA_PATH} )
 
-target_include_directories(Test24_Tracer_PathOPX PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR}/cuda)
+target_include_directories(Test24_Tracer_PathOPX PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include   ${CMAKE_CURRENT_BINARY_DIR}  ${CMAKE_CURRENT_BINARY_DIR}/cuda)
 target_link_libraries(Test24_Tracer_PathOPX PUBLIC  TestLib Test24_Share)
 add_dependencies(Test24_Tracer_PathOPX Test24_Tracer_PathOPX_Build_Kernel)
-set_target_properties(Test24_Tracer_PathOPX Test24_Tracer_PathOPX_Build_Kernel PROPERTIES FOLDER Test24/Tracers/PathOPX)
+set_target_properties(Test24_Tracer_PathOPX Test24_Tracer_PathOPX_Build_Kernel PROPERTIES FOLDER Test24/Tracer/PathOPX)
