--- a/Test/Test24/Main/CMakeLists.txt
+++ b/Test/Test24/Main/CMakeLists.txt
@@ -16,9 +16,10 @@ target_link_libraries(Test24
     Test24_Tracer_PathOPX 
     Test24_Tracer_NEEOPX 
     Test24_Tracer_WRSOPX
+    Test24_Tracer_ReSTIROPX
     Test24_Tracer_GuidePathOPX 
     Test24_Tracer_GuideNEEOPX 
     Test24_Tracer_GuideWRSOPX 
-    Test24_Tracer_ReSTIROPX
+    Test24_Tracer_GuideReSTIROPX
  )
 set_target_properties(Test24 PROPERTIES  FOLDER Test24/Main)
