--- a/Test/Test24/Tracers/CMakeLists.txt
+++ b/Test/Test24/Tracers/CMakeLists.txt
@@ -3,7 +3,8 @@ add_subdirectory(DebugOPX)
 add_subdirectory(NEEOPX)
 add_subdirectory(WRSOPX)
 add_subdirectory(PathOPX)
+add_subdirectory(ReSTIROPX)
 add_subdirectory(GuideNEEOPX)
 add_subdirectory(GuideWRSOPX)
 add_subdirectory(GuidePathOPX)
-add_subdirectory(ReSTIROPX)
+add_subdirectory(GuideReSTIROPX)
