--- a/Test/Test24/Tracers/GuideReSTIROPX/Test24GuideReSTIROPXConfig.h.in
+++ b/Test/Test24/Tracers/GuideReSTIROPX/Test24GuideReSTIROPXConfig.h.in
@@ -2,5 +2,5 @@
 #define TEST_TEST24_GUIDE_RESTIR_OPX_CONFIG_H
 #include <Test24Config.h>
 #cmakedefine TEST_TEST24_GUIDE_RESTIR_OPX_CUDA_PATH "@TEST_TEST24_GUIDE_RESTIR_OPX_CUDA_PATH@"
-#define      TEST_TEST24_GUIDE_RESTIR_OPX_RSLT_PATH TEST_TEST24_RSLT_PATH"/Tracer/GuideReSTIROPX"
+#define TEST_TEST24_GUIDE_RESTIR_OPX_RSLT_PATH TEST_TEST24_RSLT_PATH"/Tracer/GuideRESTIROPX"
 #endif
