--- a/Test/Test24/Main/CMakeLists.txt
+++ b/Test/Test24/Main/CMakeLists.txt
@@ -20,6 +20,7 @@ target_link_libraries(Test24
     Test24_Tracer_GuidePathOPX 
     Test24_Tracer_GuideNEEOPX 
     Test24_Tracer_GuideWRSOPX 
+    Test24_Tracer_GuideWRS2OPX 
     Test24_Tracer_GuideReSTIROPX
  )
 set_target_properties(Test24 PROPERTIES  FOLDER Test24/Main)
