--- a/Test/Test24/Tracers/CMakeLists.txt
+++ b/Test/Test24/Tracers/CMakeLists.txt
@@ -6,5 +6,6 @@ add_subdirectory(PathOPX)
 add_subdirectory(ReSTIROPX)
 add_subdirectory(GuideNEEOPX)
 add_subdirectory(GuideWRSOPX)
+add_subdirectory(GuideWRS2OPX)
 add_subdirectory(GuidePathOPX)
 add_subdirectory(GuideReSTIROPX)
