--- a/Test/Test24/Tracers/GuideReSTIROPX/cuda/RayTraceConfig.h.in
+++ b/Test/Test24/Tracers/GuideReSTIROPX/cuda/RayTraceConfig.h.in
@@ -1,8 +1,5 @@
-#ifndef RAY_TRACE_CONFIG_H
-#define RAY_TRACE_CONFIG_H
-#cmakedefine RAY_TRACE_MAX_VERTEX_COUNT   @RAY_TRACE_MAX_VERTEX_COUNT@ 
-#cmakedefine RAY_TRACE_ENABLE_SAMPLE      @RAY_TRACE_ENABLE_SAMPLE@
-#cmakedefine RAY_TRACE_NEE_SPECULAR       @RAY_TRACE_NEE_SPECULAR@
-#cmakedefine RAY_TRACE_S_FILTER           @RAY_TRACE_S_FILTER@
-#cmakedefine RAY_TRACE_D_FILTER           @RAY_TRACE_D_FILTER@
+#ifndef TEST24_RESTIR_OPX_RAY_TRACE_CONFIG_H
+#define TEST24_RESTIR_OPX_RAY_TRACE_CONFIG_H
+#cmakedefine RAY_TRACE_ENABLE_TEXTURE_SAMPLE @RAY_TRACE_ENABLE_TEXTURE_SAMPLE@
+#cmakedefine RAY_TRACE_ENABLE_JITTER_SAMPLE  @RAY_TRACE_ENABLE_JITTER_SAMPLE@
 #endif
